--- a/Assets/index.html
+++ b/Assets/index.html
@@ -26,92 +26,118 @@
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <!-- Added date  -->
+      <p id="currentDay" class="lead">January 7, 2023</p>
     </header>
     <div class="container-lg px-5">
 
-
-        <div id="hour-8" class="row time-block future">
-            <div class="col-2 col-md-1 hour text-center py-3">8AM</div>
-            <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-            <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-              <i class="fas fa-save" aria-hidden="true"></i>
-            </button>
-          </div>
-      <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
-
-      <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
+<!-- Added time block for each hour from 8am-6pm -->
+<div id="hour-8" class="row time-block">
+  <div class="col-2 col-md-1 hour text-center py-3">8AM</div>
+  <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+  <div class = "col-8 taskBin" id="task-8">
+    <p id = "task-item-0"></p>
+  </div>
+  <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+    <i class="fas fa-save" aria-hidden="true"></i>
+  </button>
+</div>
+   
+          <div id="hour-9" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-9">
+          <p id = "task-item-1"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
 
-      <!-- Example of a a present time block. The "present" class adds a red background color. -->
       <div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-10">
+          <p id = "task-item-2"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
 
-      <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-12" class="row time-block future">
+     
+      <div id="hour-11" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-11">
+          <p id = "task-item-3"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="hour-1" class="row time-block future">
+
+      <div id="hour-12" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-12">
+          <p id = "task-item-4"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="hour-2" class="row time-block future">
+
+      <div id="hour-1" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-13">
+          <p id = "task-item-5"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="hour-3" class="row time-block future">
+
+      <div id="hour-2" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-14">
+          <p id = "task-item-6"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="hour-4" class="row time-block future">
+
+      <div id="hour-3" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-15">
+          <p id = "task-item-7"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="hour-5" class="row time-block future">
+
+      <div id="hour-4" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-16">
+          <p id = "task-item-8"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div id="hour-6" class="row time-block future">
+
+      <div id="hour-5" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <div class = "col-8 taskBin" id="task-17">
+          <p id = "task-item-9"></p>
+        </div>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
